# ever-sdk

./: .gitbook.yaml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  SUMMARY.md  pathFix.js  r  tonVersion.js
abi/abi_core/: Cargo.toml
abi/abi_core/src/: abi_call.rs  abi_response.rs  lib.rs  tests.rs
abi/abi_core/tests/: compile-tests.rs
abi/abi_json/: Cargo.toml
abi/abi_json/src/: abi_call.rs  contract.rs  error.rs  function.rs  json_abi.rs  lib.rs  param.rs  tests.rs
abi/dynamic/: Cargo.toml
abi/dynamic/src/: contract.rs  error.rs  function.rs  json_abi.rs  lib.rs  main.rs  param.rs
abi/smart_contract_client/: Cargo.toml
abi/smart_contract_client/src/: main.rs
api/derive/: Cargo.toml
api/derive/src/: api_function.rs  api_module.rs  api_type.rs  derive_function.rs  derive_module.rs  derive_type.rs  lib.rs  utils.rs
ever_client/: Cargo.toml  build-lib.js  build.js  build.rs
ever_client/src/: error.rs
ever_client/src/abi/: decode_boc.rs  decode_data.rs  decode_message.rs  encode_account.rs  encode_message.rs  init_data.rs  internal.rs  mod.rs  signing.rs  tests.rs  types.rs
ever_client/src/boc/: blockchain_config.rs  cache.rs  common.rs  encode.rs  errors.rs  internal.rs  mod.rs  state_init.rs  tvc.rs
ever_client/src/client/: client.rs  network_mock.rs  storage.rs
ever_client/src/crypto/: hdkey.rs  math.rs  mnemonic.rs  mod.rs  nacl.rs  tests.rs
ever_client/src/debot/: base64_interface.rs  calltype.rs  dengine.rs  dinterface.rs  errors.rs  hex_interface.rs  info.rs  run_output.rs  tests.rs  tests_interfaces.rs
ever_client/src/json_interface/: crypto.rs  debot.rs  interop.rs  mod.rs  net.rs  processing.rs  request.rs  runtime.rs  utils.rs
ever_client/src/net/: batch.rs  endpoint.rs  errors.rs  mod.rs  network.rs  network_params.rs  queries.rs  subscriptions.rs  tests.rs  ton_gql.rs  transaction_tree.rs  types.rs  websocket_link.rs
ever_client/src/processing/: blocks_walking.rs  errors.rs  fetching.rs  internal.rs  message_monitor.rs  message_monitor_sdk_services.rs  mod.rs  process_message.rs  remp.rs  send_messages.rs  types.rs  wait_for_transaction.rs
ever_client/src/proofs/: engine.rs  mod.rs
ever_client/src/tests/: common.rs
ever_client/src/tvm/: call_tvm.rs  check_transaction.rs  errors.rs  mod.rs  run_message.rs  stack.rs  tests.rs  types.rs
ever_client/src/utils/: calc_storage_fee.rs
ever_client_processing/: Cargo.toml
ever_client_processing/src/: lib.rs  tests.rs
ever_client_processing/src/message_monitor/: mod.rs  monitor_queues.rs
ever_client_processing/src/sdk_services/: mock_sdk_services.rs  mod.rs
ever_sdk/: Cargo.toml
ever_sdk/src/: contract.rs  error.rs  lib.rs  message.rs
evercli/: Cargo.toml
evercli/src/: api.rs  command_line.rs  errors.rs  main.rs  request.rs
evercli/tests/: cli.rs
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
static/: Cargo.toml
static/src/: abi_call.rs  abi_response.rs  lib.rs  tests.rs
static/src/types/: bit.rs  bitstring.rs  bool.rs  common.rs  common_arrays.rs  dynamic_array.rs  dynamic_int.rs  dynamic_uint.rs  fixed_array.rs  int.rs  reader.rs  tuples.rs
static/tests/: compile-tests.rs
ton_abi/: Cargo.toml
ton_abi/src/: contract.rs  error.rs  event.rs  function.rs  int.rs  json_abi.rs  lib.rs  param.rs
ton_abi/src/param_type/: deserialize.rs  mod.rs  param_type.rs  reader.rs  tests.rs
ton_abi/src/tests/: full_stack_tests.rs  test_contract.rs  test_encoding.rs  test_param.rs
ton_abi/src/token/: deserialize.rs  detokenizer.rs  mod.rs  serialize.rs  tests.rs  tokenizer.rs
ton_client/: Cargo.toml  build-lib.js  build.js  build.rs  code.boc  data.boc  tonclient.h
ton_client/client/: Cargo.toml  README.md  build-lib.js  build.js  build.rs  tonclient.h
ton_client/client/src/: build_info.rs  client.rs  dispatch.rs  encoding.rs  error.rs  interop.rs  lib.rs  node_client.rs  open_doc.rs  serialization.rs  setup.rs  types.rs
ton_client/src/: blockchain.conf.json  client.rs  contracts.rs  dispatch.rs  encoding.rs  error.rs  interop.rs  lib.rs  mainnet_config_10660619.boc  setup.rs  types.rs
ton_client/src/abi/: decode_boc.rs  decode_data.rs  decode_message.rs  encode_account.rs  encode_boc.rs  encode_message.rs  errors.rs  function_id.rs  init_data.rs  internal.rs  mod.rs  signing.rs  tests.rs  types.rs
ton_client/src/boc/: blockchain_config.rs  cache.rs  common.rs  encode.rs  encode_external_in_message.rs  errors.rs  hash.rs  internal.rs  mod.rs  parse.rs  state_init.rs  tests.rs  tvc.rs  tvc_serialization.rs
ton_client/src/client/: client.rs  client_env.rs  client_env_tests.rs  errors.rs  mod.rs  network_mock.rs  std_client_env.rs  storage.rs  tests.rs  wasm_client_env.rs
ton_client/src/contracts/: deploy.rs  load.rs  mod.rs  run.rs
ton_client/src/crypto/: boxes.rs  encryption.rs  encscrypt.rs  errors.rs  hash.rs  hdkey.rs  internal.rs  keys.rs  math.rs  mnemonic.rs  mod.rs  nacl.rs  tests.rs
ton_client/src/debot/: action.rs  activity.rs  adapter.rs  base64_interface.rs  browser.rs  calltype.rs  console_abi.rs  context.rs  cpp_browser.rs  cpp_console.rs  cpp_debot_abi.rs  cpprun.rs  debot_abi.rs  dengine.rs  dinterface.rs  drequest.rs  dresponse.rs  errors.rs  getmethod.rs  helpers.rs  hex_interface.rs  info.rs  json_interface.rs  (+11 more)
ton_client_processing/: Cargo.toml
ton_client_processing/src/: error.rs  lib.rs  tests.rs
ton_sdk/: Cargo.toml
ton_sdk/src/: block.rs  check_proofs.rs  contract.rs  db_helper.rs  error.rs  json_helper.rs  kafka_helper.rs  lib.rs  local_tvm.rs  message.rs  node_client.rs  queries_helper.rs  requests_helper.rs  transaction.rs  types.rs  utils.rs
ton_sdk_cli/: Cargo.toml
ton_sdk_cli/src/: main.rs
ton_sdk_cli/tests/: cli.rs
toncli/: Cargo.toml  README.md
toncli/src/: api.rs  api_item.rs  command_line.rs  docs.rs  errors.rs  execute.rs  main.rs  request.rs  text_generator.rs
toncli/tests/: cli.rs
tools/update_trusted_blocks/: Cargo.toml  README.md
wallet_client/: Cargo.toml  Wallet.tvc  cfg  config  last_address  r  test_accounts
wallet_client/src/: main.rs
(+2328 files in other folders)
