[package]
name = "ton_sdk"
version = "0.1.0"

[dependencies]
rand = "0.6.1"
pretty_assertions = "0.5.1"
num-bigint = "0.2.2"
sha2 = "^0.8"
serde_json = "^1.0.39"
serde = "^1.0.90"
serde_derive = "^1.0.90"
error-chain = { version = "^0.12", default-features = false }
hex = "0.3.2"
ed25519-dalek = "^0.9.1"
lazy_static = "1.1.0"
base64 = "0.10.0"

ton_abi_core =  { path = "abi/abi_core" }
ton_abi_json = { path = "abi/abi_json" }

graphite = { path = "graphite" }

[target.'cfg(target_arch="wasm32")'.dependencies]
rand = { version = "0.6.1", features = ["wasm-bindgen"] }


[dependencies.tvm]
git = "ssh://git@github.com/tonlabs/sdk-emulator.git"
branch = "dev"
package = "tvm"
default-features = false

[dependencies.ton_block]
git = "ssh://git@github.com/tonlabs/sdk-emulator.git"
branch = "dev"
package = "ton_block"


[dependencies.reql]
version = "^0.0.26"
optional = true

[dependencies.reql-types]
version = "^0.0.4"
optional = true

[dependencies.futures]
version = "^0.1.26"
optional = true

[dependencies.kafka]
version = "0.7"
optional = true
default-features = false


[features]
default = ["node_interaction"]
ci_run = []
node_interaction = ["reql", "reql-types", "futures", "kafka"]
