[workspace]
exclude = [ 'examples/rust' ]
members = [
    'ton_sdk',
    'ton_client',
    'toncli',
    'api/test',
    'tools/update_trusted_blocks'
]

[patch.'https://github.com/tonlabs/ton-labs-abi.git']
ton_abi = { git = 'https://github.com/tonlabs//ton-labs-abi.git', branch = "allow-partial-decode" }
