[package]
authors = [ 'EverX Labs Ltd <support@everx.dev>' ]
build = 'build.rs'
edition = '2018'
license = 'Apache-2.0'
name = 'ever_client'
version = '0.49.0'

[dependencies]
aes = '0.7.4'
anyhow = '1.0'
async-trait = '0.1.40'
base58 = '0.1.0'
base64 = '0.10.0'
bincode = '1.3.3'
block-modes = '0.8.1'
byteorder = '1.3.2'
chacha20 = '0.6.0'
chrono = '0.4.6'
crc = '3.0'
ed25519-dalek = '2.0'
futures = '0.3.4'
hex = '0.3.2'
hmac = '0.11.0'
home = { optional = true, version = '0.5.3' }
indexed_db_futures = { default-features = false, optional = true, version = '0.2.0' }
js-sys = { optional = true, version = '0.3.50' }
lazy_static = '1.1.0'
libsecp256k1 = '0.6.0'
log = '0.4.11'
lru = '0.7.1'
num-bigint = '0.4'
num-derive = '0.3'
num-traits = '0.2'
pbkdf2 = { default-features = false, version = '0.8.0' }
rand = '0.7.3'
regex = '1.5.4'
reqwest = { default-features = false, features = [ 'cookies' ], optional = true, version = '0.11.11' }
scrypt = { default-features = false, version = '0.7.0' }
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
serde_repr = '0.1.7'
sha2 = '0.9.5'
thiserror = '1.0'
tiny-bip39 = '0.8.2'
tokio = { default-features = false, features = [ 'sync' ], version = '1.4' }
tokio-stream = { default-features = false, version = '0.1' }
tokio-tungstenite = { optional = true, version = '0.17.1' }
wasm-bindgen = { optional = true, version = '0.2.73' }
wasm-bindgen-futures = { optional = true, version = '0.4.15' }
web-sys = { features = [ 'ErrorEvent', 'FileReader', 'Headers', 'MessageEvent', 'ProgressEvent', 'Request', 'RequestInit', 'Response', 'Window', 'WebSocket' ], optional = true, version = '0.3.42' }
zeroize = { features = [ 'zeroize_derive' ], version = '1.3' }
zstd = { default-features = false, optional = true, version = '0.11.0' }
api_derive = { path = '../api/derive' }
api_info = { path = '../api/info' }
ever-struct = { git = 'https://github.com/everx-labs/ever-struct.git', tag = '1.1.21' }
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.8.0' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.20' }
ever_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.9.37' }
ever_client_processing = { default-features = false, path = '../ever_client_processing' }
ever_executor = { features = [ 'signature_with_id' ], git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.18.22' }
ever_sdk = { default-features = false, path = '../ever_sdk' }
ever_vm = { features = [ 'signature_with_id', 'signature_no_check' ], git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.2.21' }
lockfree = { git = 'https://github.com/everx-labs/lockfree.git', package = 'lockfree' }
sodalite = { features = [ 'rand' ], git = 'https://github.com/everx-labs/sodalite.git' }

[build-dependencies]
serde = '1.0.117'
serde_derive = '1.0.117'
serde_json = '1.0.59'

[dev-dependencies]
dirs = '2.0.2'
graphql-parser = '0.3.0'
log4rs = '1.1'
pretty_assertions = '1.2'

[features]
default = [ 'std', 'native-tls' ]
include-zstd = [ 'ever_block/gosh', 'ever_vm/gosh' ]
native-tls = [ 'reqwest/default', 'tokio-tungstenite/native-tls' ]
native-tls-vendored = [ 'reqwest/native-tls-vendored', 'tokio-tungstenite/native-tls-vendored' ]
rustls-tls-native-roots = [ 'reqwest/rustls-tls-native-roots', 'tokio-tungstenite/rustls-tls-native-roots' ]
rustls-tls-webpki-roots = [ 'reqwest/rustls-tls-webpki-roots', 'tokio-tungstenite/rustls-tls-webpki-roots' ]
std = [ 'tokio/rt-multi-thread', 'tokio/macros', 'tokio/time', 'tokio/net', 'tokio/fs', 'home', 'include-zstd', 'zstd' ]
wasm = [ 'wasm-base', 'include-zstd', 'zstd', 'zstd/thin', 'zstd/wasm' ]
wasm-base = [ 'chrono/wasmbind', 'indexed_db_futures', 'js-sys', 'rand/wasm-bindgen', 'wasm-bindgen', 'wasm-bindgen-futures', 'web-sys' ]

[lib]
crate-type = [ 'cdylib', 'rlib', 'staticlib' ]
name = 'ever_client'

