[package]
name = 'ever_sdk'
version = '1.47.0'
edition = '2018'
license = 'Apache-2.0'
authors = [ 'EverX Labs Ltd <support@everx.dev>' ]

[dependencies]
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.6.2' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.1' }

api_info = { path = '../api/info' }
api_derive = { path = '../api/derive' }

num-bigint = '0.4'
sha2 = '0.9'
serde_json = '1.0.41'
serde = '1.0.91'
serde_derive = '1.0.91'
hex = '0.3.2'
lazy_static = '1.1.0'
base64 = '0.10.0'
chrono = '0.4.9'
anyhow = '1.0'
thiserror = '1.0'
num-traits = '0.2'
log = '0.4.11'
