[package]
name = "abi-lib"
version = "0.1.0"

[dependencies]
tvm = { path = "../../tvm", features = ["verbose"] }
rand = "0.6.1"
pretty_assertions = "0.5.1"
num-bigint = "0.2.2"
ed25519-dalek = "^0.8"
sha2 = "^0.7"

#[dev-dependencies.compiletest_rs]
#features = ["tmp", "stable"]
#version = "*"

[features]
ci_run = []