[package]
name = "abi-lib"
version = "0.1.0"

[dependencies]
base64 = "0.10.0"
ed25519-dalek = "^0.8"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
hex = "0.3.2"
lazy_static = "1.1.0"
num-bigint = "0.2.2"
pretty_assertions = "0.5.1"
rand = "0.6.1"
sha2 = "^0.7"
tvm = { path = "../../tvm", features = ["verbose"] }
ton_block = { path = "../../ton_block" }

#[dev-dependencies.compiletest_rs]
#features = ["tmp", "stable"]
#version = "*"

[features]
ci_run = []