[package]
name = "ton_abi"
version = "0.1.0"

[dependencies]
base64 = "0.10.0"
pretty_assertions = "0.5.1"
num-bigint = "0.2.2"
hex = "0.3.2"
serde = "1.0.91"
serde_json = "1.0.41"
serde_derive = "1.0.91"
sha2 = "0.8"
ed25519-dalek = "^0.9.1"
error-chain = "0.12.1"
chrono = "0.4.9"
byteorder = "1.3.2"

[dependencies.tvm]
git = "ssh://git@github.com/tonlabs/sdk-emulator.git"
branch = "0.16.0-rc"
package = "tvm"
default-features = false

[dev-dependencies.rand]
version = "0.6.1"

[features]
ci_run = []
