[package]
name = 'ton_client'
version = '1.43.3'
authors = [ 'TON Labs LTD <support@tonlabs.io>' ]
edition = '2018'
license = 'Apache-2.0'
build = 'build.rs'

[lib]
name = 'ton_client'
crate-type = [ 'cdylib', 'rlib', 'staticlib' ]

[build-dependencies]
serde = '1.0.117'
serde_derive = '1.0.117'
serde_json = '1.0.59'

[dependencies]
api_derive = { path = '../api/derive' }
api_info = { path = '../api/info' }
ton_sdk = { default-features = false, path = '../ton_sdk' }
ton_client_processing = { default-features = false, path = '../ton_client_processing' }

ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.126' }
ton_block = { features = ["fast_finality"], git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.84' }
ton_block_json = { git = 'https://github.com/tonlabs/ever-block-json.git', tag = '0.7.163' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.15' }
ton_executor = { features = ['signature_with_id'], git = 'https://github.com/tonlabs/ever-executor.git', tag = '1.16.53' }
ton_vm = { features = ['signature_with_id', 'signature_no_check'], git = 'https://github.com/tonlabs/ever-vm.git', tag = '1.8.184' }
ever-struct = { git = 'https://github.com/tonlabs/ever-struct.git', tag = '0.1.2' }

lockfree = { git = 'https://github.com/tonlabs/lockfree.git', package = 'lockfree' }
sodalite = { features = [ 'rand' ], git = 'https://github.com/tonlabs/sodalite.git' }


aes = '0.7.4'
async-trait = '0.1.40'
base58 = '0.1.0'
base64 = '0.10.0'
bincode = '1.3.3'
block-modes = '0.8.1'
byteorder = '1.3.2'
chacha20 = '0.6.0'
chrono = '0.4.6'
crc = '3.0'
ed25519-dalek = '1.0.0'
failure = '0.1'
futures = '0.3.4'
hex = '0.3.2'
hmac = '0.11.0'
lazy_static = '1.1.0'
libsecp256k1 = '0.6.0'
log = '0.4.11'
lru = '0.7.1'
num-bigint = '0.4'
num-derive = '0.3'
num-traits = '0.2'
pbkdf2 = { default-features = false, version = '0.8.0' }
rand = '0.7.3'
regex = '1.5.4'
scrypt = { default-features = false, version = '0.7.0' }
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
serde_repr = '0.1.7'
sha2 = '0.9.5'
tiny-bip39 = '0.8.2'
tokio = { default-features = false, features = [ 'sync' ], version = '1.4' }
tokio-stream = { default-features = false, version = '0.1' }
zeroize = { features = [ 'zeroize_derive' ], version = '1.3' }

# optional
zstd = { default-features = false, optional = true, version = '0.11.0' }

# optional for std
reqwest = { features = [ 'cookies' ], optional = true, version = '0.11.11' }
tokio-tungstenite = { features = [ 'native-tls' ], optional = true, version = '0.17.1' }

# optional for wasm
indexed_db_futures = { default-features = false, optional = true, version = '0.2.0' }
js-sys = { optional = true, version = '0.3.50' }
wasm-bindgen = { optional = true, version = '0.2.73' }
wasm-bindgen-futures = { optional = true, version = '0.4.15' }

[dependencies.home]
version = '0.5.3'
optional = true

[dependencies.web-sys]
version = '0.3.42'
optional = true
features = [
    'ErrorEvent',
    'FileReader',
    'Headers',
    'MessageEvent',
    'ProgressEvent',
    'Request',
    'RequestInit',
    'Response',
    'Window',
    'WebSocket'
]

[dev-dependencies]
dirs = '2.0.2'
graphql-parser = '0.3.0'
log4rs = '1.1'
pretty_assertions = '1.2'


[features]
default = [ 'std' ]
include-zstd = [ 'ton_block/gosh', 'ton_vm/gosh' ]
std = [
    'tokio/rt-multi-thread',
    'tokio/macros',
    'tokio/time',
    'tokio/net',
    'tokio/fs',
    'reqwest',
    'tokio-tungstenite',
    'home',
    'include-zstd',
    'zstd'
]
wasm = [
    'wasm-base',
    'include-zstd',
    'zstd',
    'zstd/thin',
    'zstd/wasm'
]
wasm-base = [
    'chrono/wasmbind',
    'indexed_db_futures',
    'js-sys',
    'rand/wasm-bindgen',
    'wasm-bindgen',
    'wasm-bindgen-futures',
    'web-sys'
]
