[package]
name = 'ton_client_processing'
version = '1.44.4'
authors = [ 'TON Labs LTD <support@tonlabs.io>' ]
edition = '2018'
license = 'Apache-2.0'

[lib]
name = 'ton_client_processing'
crate-type = [ 'cdylib', 'rlib', 'staticlib' ]

[dependencies]
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.101' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.26' }
api_derive = { path = '../api/derive' }
api_info = { path = '../api/info' }

async-trait = '0.1.40'
futures = '0.3.4'
log = '0.4.11'
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
serde_repr = '0.1.7'
tokio = { default-features = false, features = [ 'sync' ], version = '1.4' }
base64 = "0.21.0"

[dev-dependencies]
tokio = { default-features = false, features = [ 'sync', 'rt-multi-thread', 'macros', 'time', 'net', 'fs' ], version = '1.4' }
