[package]
name = 'ton_sdk'
version = '1.39.0'
edition = '2018'
license = 'Apache-2.0'
authors = [ 'TON Labs LTD <support@tonlabs.io>' ]

[dependencies]
ton_abi = { git = 'https://github.com/tonlabs/ton-labs-abi.git', tag = '2.3.19' }
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.8.11' }
ton_vm = { default-features = false, git = 'https://github.com/tonlabs/ton-labs-vm.git', tag = '1.8.52' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.4' }

api_info = { path = '../api/info' }
api_derive = { path = '../api/derive' }

num-bigint = '0.4'
sha2 = '0.9'
serde_json = '1.0.41'
serde = '1.0.91'
serde_derive = '1.0.91'
hex = '0.3.2'
ed25519-dalek = '1.0.0'
lazy_static = '1.1.0'
base64 = '0.10.0'
chrono = '0.4.9'
failure = '0.1'
num-traits = '0.2'
log = '0.4.11'
