[package]
name = 'ton_sdk'
version = '1.46.1'
edition = '2018'
license = 'Apache-2.0'
authors = [ 'TON Labs LTD <support@everx.dev>' ]

[dependencies]
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.5.1' }
ever_block = { git = 'ssh://git@github.com/everx-labs/ever-block-private.git', branch = 'fix_wasm' }

api_info = { path = '../api/info' }
api_derive = { path = '../api/derive' }

num-bigint = '0.4'
sha2 = '0.9'
serde_json = '1.0.41'
serde = '1.0.91'
serde_derive = '1.0.91'
hex = '0.3.2'
lazy_static = '1.1.0'
base64 = '0.10.0'
chrono = '0.4.9'
failure = '0.1'
num-traits = '0.2'
log = '0.4.11'
