[package]
name = "tonsdk"
description = "Command line tool for TON SDK"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
repository = "https://github.com/tonlabs/TON-SDK"
homepage = "https://ton.dev"
documentation = "https://docs.ton.dev"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TON", "SDK", "smart contract", "tonlabs"]
edition = "2018"
version = "0.1.6"

[dependencies]
json5 = "0.2.7"
regex = "1.3.7"
dirs = "2.0.2"
serde_json = "1.0.53"

ton_client = { path = '../ton_client/client',  default_features = false, features = ["node_interaction"] }

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
