[package]
name = "toncli"
version = "1.3.0"
description = "TON CLient Command Line Tool"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
repository = "https://github.com/tonlabs/TON-SDK"
homepage = "https://ton.dev"
documentation = "https://docs.ton.dev"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TON", "SDK", "smart contract", "tonlabs"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
json5 = "0.2.8"
regex = "1.3.9"
dirs = "3.0.1"
serde_json = "1.0.58"
serde_derive = "1.0.116"
serde = "1.0.116"

ton_client = { path = '../ton_client' }
api_info = { path = '../api/info' }

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
