[package]
name = "wallet_client"
version = "0.1.0"
authors = ["Alexey Vavilin <mnogoborec@mail.ru>"]
edition = "2018"

[dependencies]
rand = "0.6.1"
ed25519-dalek = "^0.9.1"
futures = "^0.1.26"
sha2 = "^0.8"
hex = "0.3.2"
serde_json = "^1.0.39"
serde = "^1.0.90"
serde_derive = "^1.0.90"
num-bigint = "0.2.2"
num-traits = "0.2"
clap = "2.33.0"

kafka = { version = "0.7", default-features = false }
reqwest = "0.9.18"
base64 = "0.10.0"

ton_sdk = { path = "../ton_sdk" }

tvm = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "feature-dev", package = "tvm" }
