[package]
name = "ton_abi_json"
version = "0.1.0"

[dependencies]
tvm = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "feature-node", package = "tvm" }
ton_abi_core = { path = "../abi_core" }
pretty_assertions = "0.5.1"
num-bigint = "0.2.2"
hex = "0.3.2"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
sha2 = "^0.8"
ed25519-dalek = "^0.9.1"

[dev-dependencies.rand]
version = "0.6.1"

[features]
ci_run = []
