[package]
name = "abi-lib-dynamic"
version = "0.1.0"

[dependencies]
tvm = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "dev", package = "tvm" }
abi-lib = { path = "../static" }
pretty_assertions = "0.5.1"
num-bigint = "0.2.2"
hex = "0.3.2"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
sha2 = "^0.7"
ed25519-dalek = "^0.8"

[dev-dependencies.rand]
version = "0.6.1"

[features]
ci_run = []
