[package]
name = "smart_contract_client"
version = "0.1.0"
authors = ["Alexey Vavilin <mnogoborec@mail.ru>"]
edition = "2018"

[dependencies]
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
tvm = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "feature-blockchain-structs-to-jsons", package = "tvm" }
ton_block = { git = "ssh://git@github.com/tonlabs/sdk-emulator.git", branch = "feature-blockchain-structs-to-jsons", package = "ton_block" }
abi-lib = {  path = "../static"  }
base64 = "0.10.0"
clap = "2.32.0"
hex = "0.3.2"
ed25519-dalek = "^0.8"
sha2 = "^0.7"
rand = "0.6.1"
lazy_static = "1.1.0"