[package]
authors = [ 'TON Labs LTD <support@tonlabs.io>' ]
edition = '2018'
name = 'api_derive'
version = '1.43.2'

[dependencies]
quote = '1.0.26'
serde_json = '1.0.57'
api_info = { path = '../info' }
syn = { features = [ 'full' ], version = '1.0.109' }
proc-macro2 = "1.0.52"

[lib]
proc-macro = true
