[package]
authors = [ 'EverX Labs Ltd <support@everx.dev>' ]
edition = '2018'
name = 'api_derive'
version = '1.47.0'

[dependencies]
quote = '1.0.26'
serde_json = '1.0.57'
api_info = { path = '../info' }
syn = { features = [ 'full' ], version = '1.0.109' }
proc-macro2 = "1.0.52"

[lib]
proc-macro = true
