[package]
name = "ton_client"
version = "0.11.2"
authors = ["Michael Vlasov"]
rpath = true

[lib]
name = "ton_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.6.1"
hex = "0.3.2"
serde_json = "1.0.39"
serde_derive = "1.0.91"
serde = "1.0.91"
ed25519-dalek = "^0.9.1"
sha2 = "^0.8"
futures = "^0.1.26"
base64 = "0.10.0"
lazy_static = "1.1.0"
num-bigint = "0.2.2"
sodalite = { version = "0.3.0", features = ["rand"] }
chrono = "0.4.6"
scrypt = { version = "0.2.0", default-features = false }
bip39 = { git = "https://github.com/tonlabs/bip39-rs.git" }
hmac = "0.7.1"
base58 = "0.1.0"
pbkdf2 = { version = "0.3.0", default-features = false, features = [] }
byteorder = "1.3.2"
libsecp256k1 = "0.2.2"
log = "0.4.6"

ton_sdk = { path = "../../ton_sdk", default-features = false }

[dependencies.tvm]
git = "ssh://git@github.com/tonlabs/sdk-emulator.git"
branch = "feature-dev"
package = "tvm"
default-features = false

[features]
default = ["node_interaction"]
node_interaction = ["ton_sdk/node_interaction"]
