[package]
name = "update_trusted_blocks"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
serde_json = "1.0.68"
serde = "1.0.130"
serde_derive = "1.0.130"
failure = "0.1.8"
tokio = { version = "0.2.13", features = ["sync", "stream", "fs"], default-features = false }

ton_client = { path = "../../ton_client" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
