[package]
edition = '2018'
name = 'update_trusted_blocks'
version = '0.1.1'

[dependencies]
bincode = '1.3.3'
failure = '0.1.8'
serde = '1.0.130'
serde_derive = '1.0.130'
serde_json = '1.0.68'
tokio = { default-features = false, features = [ 'sync', 'fs' ], version = '1' }
ton_client = { path = '../../ton_client' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '1.11.4' }
