[package]
edition = '2018'
name = 'update_trusted_blocks'
version = '0.1.0'

[dependencies]
anyhow = '1.0'
bincode = '1.3.3'
serde = '1.0.130'
serde_derive = '1.0.130'
serde_json = '1.0.68'
tokio = { default-features = false, features = [ 'sync', 'fs' ], version = '1' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.20' }
ever_client = { path = '../../ever_client' }

